--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
 server:
   port: 9093
 
-#eureka:
-#  client:
-#    registerWithEureka: false
-#    fetchRegistry: true
-#    serviceUrl:
-#      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761}/eureka/
+eureka:
+  client:
+    registerWithEureka: false
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761}/eureka/
